@@ -1,3 +1,7 @@
+2005-02-07  Richard Henderson  <rth@redhat.com>
+
+	* iconvdata/jis0208.h (struct jisx0208_ucs_idx): Move before use.
+
 2005-02-08  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
 
 	* sysdeps/sh/dl-machine.h (elf_machine_rela): Remove code using
